<resources>
    <string name="app_name">MovieTime</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="tagline">Tagline:</string>
    <string name="revenue">Revenue:</string>
    <string name="imdb">IMDB:</string>
    <string name="budget">Budget:</string>
    <string name="overview">Overview:</string>
    <string name="_7_6">7.6</string>
    <string name="user_rating">User Rating:</string>
    <string name="_2017_02_03">2017–02–03</string>
    <string name="no_internet_warning">No Working Internet Connection Detected. \nPlease connect to Internet and try again.</string>
    <string name="retry">Retry</string>
    <string name="no_internet_image">No Internet Image</string>
    <string name="click_here">Click Here</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="votes_label">Votes:</string>
    <string name="runtime_label">Runtime:</string>
    <string name="homepage_url">Homepage url</string>
    <string name="website">Website:</string>
    <string name="movie_poster_shown_here">Movie Poster Shown Here</string>
    <string name="movie_name_comes_here">Movie Name COmes Here</string>
    <string name="movie_cover_image">Movie Cover Image</string>
    <string name="release_placeholder_text">Release Date:</string>
    <string name="user_rating_placeholder_text">User Rating:</string>
    <string name="movietitle_placeholder_text">MovieTitle this ionw is long to check.</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="cover_image_content_description">Cover Poster of Movie</string>
    <string name="no_api_key_Warning">Please make sure you have API KEY placed in grade.properties</string>
    <string name="no_ytapi_key_Warning">Please make sure you have Youtube API KEY placed in grade.properties to watch trailers in the app.</string>
    <string name="cover_image">Backdrop Image</string>
    <string name="url_image_w342">http://image.tmdb.org/t/p/w342</string>
    <string name="no_reviews">No Reviews Available Yet.</string>
    <string-array name="countries_array_value">
        <item>AD</item>
        <item>AE</item>
        <item>AF</item>
        <item>AG</item>
        <item>AI</item>
        <item>AL</item>
        <item>AM</item>
        <item>AN</item>
        <item>AO</item>
        <item>AQ</item>
        <item>AR</item>
        <item>AS</item>
        <item>AT</item>
        <item>AU</item>
        <item>AW</item>
        <item>AZ</item>
        <item>BA</item>
        <item>BB</item>
        <item>BD</item>
        <item>BE</item>
        <item>BF</item>
        <item>BG</item>
        <item>BH</item>
        <item>BI</item>
        <item>BJ</item>
        <item>BM</item>
        <item>BN</item>
        <item>BO</item>
        <item>BR</item>
        <item>BS</item>
        <item>BT</item>
        <item>BV</item>
        <item>BW</item>
        <item>BZ</item>
        <item>BY</item>
        <item>CA</item>
        <item>CC</item>
        <item>CD</item>
        <item>CF</item>
        <item>CG</item>
        <item>CH</item>
        <item>CI</item>
        <item>CK</item>
        <item>CL</item>
        <item>CM</item>
        <item>CN</item>
        <item>CO</item>
        <item>CR</item>
        <item>CS</item>
        <item>CU</item>
        <item>CV</item>
        <item>CX</item>
        <item>CY</item>
        <item>CZ</item>
        <item>DE</item>
        <item>DJ</item>
        <item>DK</item>
        <item>DM</item>
        <item>DO</item>
        <item>DZ</item>
        <item>EC</item>
        <item>EE</item>
        <item>EG</item>
        <item>EH</item>
        <item>ER</item>
        <item>ES</item>
        <item>ET</item>
        <item>FI</item>
        <item>FJ</item>
        <item>FK</item>
        <item>RS</item>
        <item>FM</item>
        <item>FO</item>
        <item>FR</item>
        <item>GA</item>
        <item>GB</item>
        <item>GD</item>
        <item>GE</item>
        <item>GF</item>
        <item>GH</item>
        <item>GI</item>
        <item>GL</item>
        <item>GM</item>
        <item>GN</item>
        <item>GP</item>
        <item>GQ</item>
        <item>GR</item>
        <item>GS</item>
        <item>GT</item>
        <item>GU</item>
        <item>GW</item>
        <item>GY</item>
        <item>HK</item>
        <item>HM</item>
        <item>HN</item>
        <item>HR</item>
        <item>HT</item>
        <item>HU</item>
        <item>ID</item>
        <item>IE</item>
        <item>IL</item>
        <item>IN</item>
        <item>IO</item>
        <item>IQ</item>
        <item>IR</item>
        <item>IS</item>
        <item>IT</item>
        <item>JM</item>
        <item>JO</item>
        <item>JP</item>
        <item>KE</item>
        <item>KG</item>
        <item>KH</item>
        <item>KI</item>
        <item>KM</item>
        <item>KN</item>
        <item>KP</item>
        <item>KW</item>
        <item>KY</item>
        <item>KZ</item>
        <item>LA</item>
        <item>LB</item>
        <item>LC</item>
        <item>LI</item>
        <item>LK</item>
        <item>LR</item>
        <item>LS</item>
        <item>LT</item>
        <item>LU</item>
        <item>LV</item>
        <item>LY</item>
        <item>MA</item>
        <item>MC</item>
        <item>MD</item>
        <item>MG</item>
        <item>MH</item>
        <item>MK</item>
        <item>ML</item>
        <item>MM</item>
        <item>MN</item>
        <item>MO</item>
        <item>MP</item>
        <item>MQ</item>
        <item>MR</item>
        <item>MS</item>
        <item>MT</item>
        <item>MU</item>
        <item>MV</item>
        <item>MW</item>
        <item>MX</item>
        <item>MY</item>
        <item>MZ</item>
        <item>NA</item>
        <item>NC</item>
        <item>NE</item>
        <item>NF</item>
        <item>NG</item>
        <item>ME</item>
        <item>NI</item>
        <item>NL</item>
        <item>NO</item>
        <item>NP</item>
        <item>NR</item>
        <item>NU</item>
        <item>NZ</item>
        <item>OM</item>
        <item>PA</item>
        <item>PE</item>
        <item>PF</item>
        <item>PG</item>
        <item>PH</item>
        <item>YU</item>
        <item>XK</item>
        <item>XC</item>
        <item>PK</item>
        <item>PL</item>
        <item>PM</item>
        <item>PN</item>
        <item>PR</item>
        <item>PS</item>
        <item>PT</item>
        <item>PW</item>
        <item>PY</item>
        <item>QA</item>
        <item>RE</item>
        <item>RO</item>
        <item>RU</item>
        <item>RW</item>
        <item>SA</item>
        <item>SB</item>
        <item>SC</item>
        <item>SD</item>
        <item>SE</item>
        <item>SG</item>
        <item>SH</item>
        <item>SI</item>
        <item>SJ</item>
        <item>SK</item>
        <item>SL</item>
        <item>SM</item>
        <item>SN</item>
        <item>SO</item>
        <item>SR</item>
        <item>ST</item>
        <item>SV</item>
        <item>SY</item>
        <item>SZ</item>
        <item>TC</item>
        <item>TD</item>
        <item>TF</item>
        <item>TG</item>
        <item>TH</item>
        <item>TJ</item>
        <item>TK</item>
        <item>TL</item>
        <item>TM</item>
        <item>TN</item>
        <item>TO</item>
        <item>TR</item>
        <item>TT</item>
        <item>TV</item>
        <item>TW</item>
        <item>TZ</item>
        <item>UA</item>
        <item>UG</item>
        <item>UM</item>
        <item>US</item>
        <item>UY</item>
        <item>UZ</item>
        <item>VA</item>
        <item>VC</item>
        <item>VE</item>
        <item>VG</item>
        <item>VI</item>
        <item>VN</item>
        <item>VU</item>
        <item>WF</item>
        <item>WS</item>
        <item>YE</item>
        <item>YT</item>
        <item>ZA</item>
        <item>ZM</item>
        <item>ZW</item>
        <item>KR</item>
        <item>XG</item>
        <item>SU</item>
        <item>SS</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="placeholder_overview">Overvire will come here</string>
    <string name="actor_image">Actor_image</string>
    <string name="name_of_actor">Name Of Actor</string>
    <string name="character_name">Character Name</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="star">Star</string>
    <string name="_7_5">7.5</string>
    <string name="_2008">2008</string>
    <string name="action_adventure">Action, Adventure</string>
</resources>