<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/now_playing"
        android:title="@string/now_playing" />
    <item
        android:id="@+id/popular"
        android:title="@string/popular" />
    <item
        android:id="@+id/top_rated"
        android:title="@string/top_rated" />
    <item
        android:id="@+id/upcoming"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>