<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_search_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/castBackground"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/name_of_actor"
        android:textColor="@color/colorHeadings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean"
        tools:text="Movie Name" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/star"
        app:layout_constraintEnd_toStartOf="@+id/movie_rating"
        app:layout_constraintTop_toBottomOf="@+id/person_name"
        app:srcCompat="@drawable/ic_star_black_24dp" />

    <TextView
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="marquee"

        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/_7_5"
        android:textColor="@color/colorHeadings"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/movie_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:ellipsize="marquee"

        android:fontFamily="sans-serif-smallcaps"
        android:singleLine="true"
        android:text="@string/action_adventure"
        android:textColor="@color/colorHeadings"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/person_name"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="marquee"

        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/placeholder_overview"
        android:textColor="@color/colorHeadings"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_genres"
        tools:targetApi="jelly_bean" />
</android.support.constraint.ConstraintLayout>