<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:id="@+id/movie_poster_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/movie_poster_content_description"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/loader" />

            <TextView
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_poster"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:padding="2dp"
                android:singleLine="true"
                android:text="@string/movie_name_comes_here"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textStyle="bold"
                card_view:fontFamily="sans-serif-smallcaps" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/person_name"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/_2008" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/movie_year"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:gravity="end"
                android:padding="2dp"
                android:text="@string/_7_5" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>