<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="320dp"
    android:layout_margin="5dp"
    android:background="@color/castBackground"
    android:padding="5dp">


    <ImageView
        android:id="@+id/cast_image"
        android:layout_width="185dp"
        android:layout_height="255dp"

        android:layout_marginTop="16dp"
        android:contentDescription="@string/actor_image"

        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person" />

    <TextView
        android:id="@+id/original_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/name_of_actor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_name" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:text="@string/character_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cast_image"
        tools:text="Charavcte Name" />
</android.support.constraint.ConstraintLayout>