<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="280dp"
    android:layout_margin="5dp"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:padding="2dp"

        card_view:cardCornerRadius="0dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:id="@+id/movie_poster_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/movie_poster_content_description"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/person" />

            <TextView
                android:id="@+id/person_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_poster"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="2dp"
                android:singleLine="true"
                android:text="@string/movie_name_comes_here"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#bbb9ba"
                android:textSize="14sp"
                android:textStyle="bold"
                card_view:fontFamily="sans-serif-smallcaps" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/movie_poster"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="1dp"

                android:layout_marginRight="1dp"
                android:layout_toLeftOf="@+id/movie_rating"
                android:layout_toStartOf="@+id/movie_rating"
                android:contentDescription="@string/movie_poster"
                card_view:srcCompat="@drawable/ic_star_black_24dp" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/movie_poster"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/semiTransparent"
                android:gravity="end"
                android:text="@string/_7_5"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                card_view:fontFamily="sans-serif-smallcaps" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/person_name"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="-2dp"
                android:padding="4dp"
                android:text="@string/_2008"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#bbb9ba"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/person_name"
                android:layout_gravity="end"
                android:layout_marginTop="-2dp"
                android:layout_toEndOf="@+id/movie_year"
                android:layout_toRightOf="@+id/movie_year"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="4dp"
                android:singleLine="true"
                android:text="@string/action_adventure"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#bbb9ba"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>